--- a/WebUI/Views/Tenant/Index.cshtml
+++ b/WebUI/Views/Tenant/Index.cshtml
@@ -46,23 +46,21 @@
                             foreach (var residentModelDto in Model)
                             {
                                 <tr>
-                                    <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar2.jpeg">Bruno Nash<br></td>
+                                    <td><img class="rounded-circle me-2" width="30" height="30" src="/assets/img/avatars/avatar2.jpeg">James Nash<br></td>
                                     <td>@residentModelDto.IdentityNumber</td>
                                     <td>@residentModelDto.Phone</td>
                                     <td>@residentModelDto.Plate</td>
                                     <td>@residentModelDto.HasACar<br></td>
-                                    <td>$163,500</td>
                                 </tr>
                             }
                         }
                   
                         <tr>
-                        <td><img class="rounded-circle me-2" width="30" height="30" src="assets/img/avatars/avatar3.jpeg">Caesar Vance</td>
+                        <td><img class="rounded-circle me-2" width="30" height="30" src="/assets/img/avatars/avatar3.jpeg">Caesar Vance</td>
                         <td>Pre-Sales Support</td>
                         <td>New York</td>
                         <td>21</td>
                         <td>2011/12/12<br></td>
-                        <td>$106,450</td>
 
                         </tbody>
                         <tfoot>
