--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="~/assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="~/assets/css/Sidebar-Menu-sidebar.css">
     <link rel="stylesheet" href="~/assets/css/Sidebar-Menu.css">
+    <link rel="stylesheet" href="~/assets/css/message.css">
+    
+
 </head>
 
 <body id="page-top">
