UI components added

--- a/WebUI/Views/Shared/_LayoutLogin.cshtml
+++ b/WebUI/Views/Shared/_LayoutLogin.cshtml
@@ -14,10 +14,12 @@
 </head>
 
 <body class="bg-gradient-primary">
+<div class="container">
     @RenderBody()
-    <script src="~/assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="~/assets/js/Sidebar-Menu.js"></script>
-    <script src="~/assets/js/theme.js"></script>
+</div>
+<script src="~/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="~/assets/js/Sidebar-Menu.js"></script>
+<script src="~/assets/js/theme.js"></script>
 </body>
 
 </html>
