Update tenant view and stage logs

--- a/WebUI/Views/Tenant/AddTenant.cshtml
+++ b/WebUI/Views/Tenant/AddTenant.cshtml
@@ -50,7 +50,7 @@
                                             <div class="mb-3"><label class="form-label" asp-for="Plate"><strong>Plate</strong></label><input  class="form-control" type="text" asp-for="Plate" placeholder="John" ></div>
                                         </div>
                                     </div>
-                                    <div class="mb-3"><button class="btn btn-primary btn-sm" type="submit">Save Settings</button></div>
+                                    <div class="mb-3"><button class="btn btn-primary btn-sm" type="submit">Submit</button></div>
                                 </form>
                             </div>
                     </div>
