--- a/WebUI/Views/Tenant/Index.cshtml
+++ b/WebUI/Views/Tenant/Index.cshtml
@@ -4,15 +4,14 @@
 @{
     Layout = "_Layout";
 }
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+
 @model List<Dto.Concrete.Dtos.Tenant.TenantModelDto>
 
     <div class="container-fluid">
         <div class="card shadow">
             <div class="card-header py-3" style="align-items: center; display: flex; justify-content: space-between">
                 <p class="text-primary m-0 fw-bold">Tenants</p>
-                <button type="button" 
-                        asp-action="AddTenant" class="btn btn-sm btn-success">Add Tenant</button>
+                <a  asp-action="Add" class="btn btn-sm btn-success">Add Tenant</a>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -58,8 +57,8 @@
                                         <td>@residentModelDto.Email</td>
                                         <td>@residentModelDto.Phone</td>
                                         <td>
-                                            <button type="button" class="btn btn-sm btn-warning"> Edit </button>
-                                            <button type="button" class="btn btn-sm btn-danger">Delete</button>
+                                            <a asp-action="Details"  asp-route-id="@residentModelDto.Id"  class="btn btn-sm btn-warning"> Edit </a>
+                                            <a asp-action="Delete" asp-route-id="@residentModelDto.Id" class="btn btn-sm btn-danger">Delete</a>
 
                                         </td>
                                     </tr>
