--- a/WebUI/Views/_ViewImports.cshtml
+++ b/WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebUI
 @using WebUI.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+
