--- a/WebUI/Views/Tenant/Add.cshtml
+++ b/WebUI/Views/Tenant/Add.cshtml
@@ -17,7 +17,7 @@
                                 @*<p class="text-primary m-0 fw-bold">User Settings</p>*@
                             </div>
                             <div class="card-body">
-                                <form method="post" asp-action="AddTenant" >
+                                <form method="post" asp-controller="Tenant" asp-action="Add" >
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3"><label class="form-label"asp-for="Firstname"><strong>Firstname</strong></label><input class="form-control" asp-for="Firstname" type="text" id="username" placeholder="user.name" ></div>
